refactor syntax tree and parser, make all compile