@@ -7,7 +7,11 @@ plugins {
 group 'decaf'
 version '1.0'
 
-sourceCompatibility = 1.8
+sourceCompatibility = JavaVersion.VERSION_12
+
+tasks.withType(JavaCompile).each {
+    it.options.compilerArgs.add('--enable-preview')
+}
 
 repositories {
     mavenCentral()
@@ -15,3 +19,4 @@ repositories {
 
 dependencies {
 }
+
